reconcile mgws on sidecar or meshconfig change - based on checksum fields in icp status

--- a/internal/assets/manifests/istio-control/istio-discovery/templates/istiod-injector-configmap.yaml
+++ b/internal/assets/manifests/istio-control/istio-discovery/templates/istiod-injector-configmap.yaml
@@ -9,6 +9,7 @@ metadata:
   {{- end }}
   namespace: {{ .Release.Namespace }}
   labels:
+    istio: sidecar-injector
     istio.io/rev: {{ include "namespaced-revision" . }}
     release: {{ .Release.Name }}
 data:
