Add missing event create role

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -25,6 +25,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - events
+  verbs:
+  - create
+- apiGroups:
+  - ""
+  resources:
   - namespaces
   verbs:
   - get
