--- a/deploy/charts/istio-operator-v2/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator-v2/templates/operator-rbac.yaml
@@ -35,6 +35,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - events
+  verbs:
+  - create
+- apiGroups:
+  - ""
+  resources:
   - namespaces
   verbs:
   - get
